crates/data-dict/tests/snapshots/validate_spec__r_that_reads_to_a_non_boolean_assertion_is_still_s21.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
description: Each row is a survey response.
tables:
  - name: survey
    columns:
      - name: postcode
        type: string
        examples: ["NZ-1010"]
    constraints:
      - assert: nchar(postcode)
        language: r
────────────────────────────────────────
error[S21]: An assertion must be a well-typed boolean expression.
  --> dict.yaml:11:17
   |
LL |   - name: survey
...
LL |       - assert: nchar(postcode)
   |                 ^^^^^^^^^^^^^^^ this assertion is a number, not a boolean
